Fix PR kern/42570

* Graphire uses the descriptor as same as Graphire 3.
  This is confirmed by USB analysis on Windows.
  That is done with Wacom's official device driver and USB Snoopy.

* Old rev. 1.1 descriptor supports stylus only, probably 4D mouse
  is not supported. Graphire 3's one probably supports 4D mouse.

* Graphire also needs 0x0202 sending.